Fix height overflow bug

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,7 +119,7 @@ img{
     padding: 2rem 0 4rem;
     min-height: 100vh;
     min-width: 100vw;
-    max-height: 100vh;
+    /* max-height: 100vh; */
     max-width: 100vw;
     display: flex;
     flex-direction: column;
